# tidyms2

./: .cspell.json  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  tach.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: e2e.yaml  pr.yaml  publish.yaml  release-please.yaml
docs/: algorithms.rst  api.rst  conf.py  developer.rst  glossary.rst  guides.rst  index.rst  overview.rst
docs/api/: chemistry.rst  core.rst  io.rst  lcms.rst  storage.rst
docs/api/algorithms/: signal.rst
docs/api/core/: enumerations.rst  interfaces.rst  operators.rst
docs/dev/: extending.rst
docs/guides/: assay.rst  chemistry.rst  operators.rst  raw-data.rst  sample.rst  simulation.rst
docs/overview/: assay.rst  introduction.rst  sample.rst
docs/plots/: single_sample_processing.py
src/tests/: conftest.py
src/tests/integration/: test_e2e_processing_pipeline.py
src/tests/unit/: conftest.py  helpers.py
src/tests/unit/algorithms/: test_algorithms_raw.py  test_algorithms_signal.py
src/tests/unit/annotation/: test_annotation.py  test_annotation_consensus.py  test_annotation_correspondence.py  test_annotation_envelope_finder.py  test_annotation_mmi_finder.py
src/tests/unit/chem/: test_chem_formula.py  test_chem_formula_generator.py  test_chem_isotope_scorer.py
src/tests/unit/core/: test_core_io.py  test_core_matrix.py  test_core_models.py  test_core_operators.py
src/tests/unit/io/: test_io_msdata.py  test_io_mzml.py
src/tidyms2/: __init__.py  operators.py
src/tidyms2/algorithms/: raw.py  signal.py
src/tidyms2/annotation/: consensus.py  correspondence.py  envelope_finder.py  mmi_finder.py  operators.py
src/tidyms2/assay/: assay.py  executors.py  utils.py
src/tidyms2/chem/: __init__.py  atoms.py  config.py  envelope.py  envelope_utils.py  formula.py  formula_generator.py
src/tidyms2/core/: assay.py  dataflow.py  enums.py  exceptions.py  io.py  matrix.py  models.py  operators.py  registry.py  storage.py  table.py
src/tidyms2/io/: matrix.py  msdata.py  mzml.py  reader.py
src/tidyms2/lcms/: __init__.py  assay.py  models.py  operators.py  simulation.py
src/tidyms2/simulation/: base.py  lcms.py
src/tidyms2/storage/: __init__.py  memory.py  table.py
src/tidyms2/utils/: numpy.py
(+18 files in other folders)
