[project]
name = "tidyms2"
version = "0.1.0"
authors = [{ name = "Gabriel Riquelme", email = "griquelme.chm@gmail.com" }]
description = "Tools to process mass spectrometry data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=2.1.0", "pydantic>=2.8.2", "uuid-utils>=0.9.0"]

[project.optional-dependencies]
dev = [
    "commitizen>=3.29.0",
    "pre-commit>=3.8.0",
    "pyright>=1.1.378",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.2",
    "ruff>=0.6.3",
]
docs = [
    "autodoc-pydantic>=2.2.0",
    "pydata-sphinx-theme>=0.15.4",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-pyproject>=0.3.0",
    "sphinx>=8.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 119
lint.select = ["F", "W", "E", "I", "D"]
lint.ignore = ["D105", "D107", "D203", "D213"]
exclude = ["docs/"]

[tool.ruff.lint.extend-per-file-ignores]
"src/tidyms2/__init__.py" = ["D"]
"src/tests/*" = ["D100", "D101", "D102", "D103", "D104"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["src/tests/unit"]
